--- a/Tabela/teste.html
+++ b/Tabela/teste.html
@@ -3,54 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <title>Tabela</title>
-        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-        <link href="css/freelancer.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
-    <style>
-        tr, td, th, table {
-            border: solid 1px black;
-            border-radius: 3px;
-            text-align: center;
-        }
-        /* #detalhes{
-            background-color: green;
-            border: solid 1px black;
-            color: white;
-            border-radius: 3px;
-            padding: 5px;
-        }
-        #editar{
-            background-color: blue;
-            color: white;
-            border: solid 1px black;
-            border-radius: 3px;
-            padding: 5px;
-        }
-        #deletar{
-            background-color: red;
-            color: white;
-            border: solid 1px black;
-            border-radius: 3px;
-            padding: 5px;
-        } */
     </style>
     <body>
-        <table>
+        <table class="table table-striped table-dark">
             <tr>
                 <th>Nome</th>
                 <th>Email</th>
                 <th>Idade</th>
                 <th>País</th>
-                <th colspan="3px">Ações</th>
+                <th>Ações</th>
             </tr>
             <tr>
                 <td>Macoratti</td>
                 <td>Macoratti@yahoo.com</td>
                 <td>44</td>
                 <td>Brasil</td>
-                <td><button class="btn brt-cancelar">Detalhes</button></td>
-                <td><button class="btn brt-cancelar">Editar</button></td>
-                <td><button class="btn brt-cancelar">Deletar</button></td>
+                <td>
+                    <button type="button" class="btn btn-primary">Primary</button>
+                    <button type="button" class="btn btn-success">Success</button>
+                    <button type="button" class="btn btn-danger">Danger</button>
+                </td>
             </tr>
         </table>   
     </body>
