--- a/Tabela/teste.html
+++ b/Tabela/teste.html
@@ -21,11 +21,12 @@
                 <td>44</td>
                 <td>Brasil</td>
                 <td>
-                    <button type="button" class="btn btn-primary">Primary</button>
-                    <button type="button" class="btn btn-success">Success</button>
-                    <button type="button" class="btn btn-danger">Danger</button>
+                    <button type="button" class="btn btn-success">Detalhes</button>
+                    <button type="button" class="btn btn-primary">Editar</button>
+                    <button type="button" class="btn btn-danger">Deletar</button>
                 </td>
             </tr>
-        </table>   
+        </table> 
+        <script src="tabela.js"></script>  
     </body>
 </html>
